syntax = "proto3";

package category.v1;
option go_package = "github.com/Wafer233/WaferTakeOut/Server/wafer-take-out-server/category-service/proto;categorypb";

service CategoryService {
  rpc Create(CategoryRequest) returns (EmptyResponse) {}
  rpc Delete(IdRequest) returns (EmptyResponse) {}
  rpc Update(CategoryRequest) returns (EmptyResponse) {}
  rpc UpdateStatus(UpdateStatusRequest) returns (EmptyResponse) {}
  rpc FindPage(PageRequest) returns (PageResponse) {}
  rpc FindByType(FindTypeRequest) returns (FindTypeResponse) {}

}

message EmptyResponse {
}

message IdRequest {
  int64 id = 1;
}

message CategoryRequest {
  int64 id = 1;
  string name = 2;
  int32 sort = 3;
  int32 type = 4;
  int64 curId = 5;
}

message UpdateStatusRequest {
  int64 id = 1;
  int32 status = 2;
  int64 curId = 3;
}

message PageRequest {
  string name = 1;
  int32 page = 2;
  int32 pageSize = 3;
  int32 type = 4;
}

message PageResponse {
  int64 total = 1;
  repeated Record records = 2;
}

message Record {
  int64 id = 1;
  int32 type = 2;
  string name = 3;
  int32 sort = 4;
  int32 status = 5;
  string createTime = 6;
  string updateTime = 7;
  int64 createUser = 8;
  int64 updateUser = 9;
}

message FindTypeRequest {
  int32 curType = 1;
}

message FindTypeResponse {
  repeated Record records = 1;
}
